Ensure responsive menu is not clipped in sm mode

--- a/JsPlc.Ssc.Link/JsPlc.Ssc.Link.Portal/Content/Site.css
+++ b/JsPlc.Ssc.Link/JsPlc.Ssc.Link.Portal/Content/Site.css
@@ -204,7 +204,8 @@ font-size:80%;
   color:#EF6600;
 }
 
-.nav {margin-left:-25px;}
+/* The following rule clipped the menu opton in sm view*/
+/*.nav {margin-left:-25px;}*/
 
 .breadcrumb {margin-bottom:0px;}
 
